--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -3,12 +3,17 @@ title: "Conferences"
 date: 2021-12-04T10:01:00+02:00
 draft: false
 type: "page"
+markup: adoc
 ---
 
 This page gives an overview over some talks I have done over the last years.
 I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOne, local meet-ups as well as company-internal events, covering topics such as Debezium and Change Data Capture, Bean Validation, NoSQL and more.
 
 If you'd like to have me as a speaker at your conference or meet-up, please get in touch.
+
+== 2022
+
+* jChampionsConference (online): Continuous Performance Regression Testing with JfrUnit (https://www.youtube.com/watch?v=OS7yZJQ2Q-0[recording], https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit-jchampionsconf[slides])
 
 == 2021
 
@@ -28,6 +33,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 * Kafka Summit Europe (joint presentation with Hans-Peter Grahsl; online): Advanced Change Data Streaming Patterns in Distributed Systems (https://www.confluent.io/events/kafka-summit-europe-2021/advanced-change-data-streaming-patterns-in-distributed-systems/[recording], https://speakerdeck.com/hpgrahsl/advanced-change-data-streaming-patterns-in-distributed-systems-at-kafka-summit-europe-2021[slides])
 * DevNation Tech Talk (online): Continuous performance regression testing with JfrUnit (https://www.youtube.com/watch?v=Lgr3orOi3sI[recording], https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit[slides])
 * Bordeaux JUG (joint presentation with Katja Aresti; online): https://www.youtube.com/watch?v=pXkM9tlxwHY[Don't fear outdated caches -- change data capture to the rescue! Let's discover Infinispan and Debezium]
+* jChampionsConference (joint presentation with Andres Almiray; online): https://www.youtube.com/watch?v=PKSJrV0Te_E[Plug-in Architectures for Java with Layrry & the Java Module System]
 
 == 2020
 
