Using unified logging switch for class load tracing

--- a/content/blog/building-hsdis-for-openjdk-15.asciidoc
+++ b/content/blog/building-hsdis-for-openjdk-15.asciidoc
@@ -111,7 +111,7 @@ Compile and run it like so:
 ----
 javac PrintAssemblyTest.java
 java -XX:+UnlockDiagnosticVMOptions -XX:+PrintAssembly \
- -XX:+TraceClassLoading -XX:+LogCompilation \
+ -Xlog:class+load=info -XX:+LogCompilation \
  PrintAssemblyTest
 ----
 
