Adding link to HN discussion

--- a/content/blog/whats-in-a-good-error-message.asciidoc
+++ b/content/blog/whats-in-a-good-error-message.asciidoc
@@ -15,6 +15,8 @@ endif::[]
 
 _Update Jan 13: This post is https://www.reddit.com/r/programming/comments/s2kcp7/whats_in_a_good_error_message/[discussed on Reddit]_
 
+_Update Feb 7: This post is https://news.ycombinator.com/item?id=30234572[discussed on Hacker News]_
+
 As software developers, we've all come across those annoying, not-so-useful error messages when using some library or framework: _"Couldn't parse config file"_, _"Lacking permission for this operation"_, etc.
 Ok, ok, so _something_ went wrong apparently; but what exactly? What config file? Which permissions? And what should you do about it?
 Error messages lacking this kind of information quickly create a feeling of frustration and helplessness.
