--- a/content/blog/the-code-review-pyramid.asciidoc
+++ b/content/blog/the-code-review-pyramid.asciidoc
@@ -25,7 +25,7 @@ As some folks asked for a permanent, referenceable location of that resource and
 
 image::code_review_pyramid.png[]
 
-You can also download the visual as an link:/images/image::code_review_pyramid.svg[SVG file, window="_blank"].
+You can also download the visual as an link:/images/code_review_pyramid.svg[SVG file, window="_blank"].
 
 == FAQ
 
