--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,6 +13,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2022
 
+* Carnegie Mellon University https://db.cs.cmu.edu/seminar2022-booster/["Vaccination Database Tech Talks"] (online): Open-source Change Data Capture With Debezium (https://youtu.be/G7TvRzPQH-U[recording], https://speakerdeck.com/gunnarmorling/open-source-change-data-capture-with-debezium[slides]) 
 * jChampionsConference (online): Continuous Performance Regression Testing with JfrUnit (https://www.youtube.com/watch?v=OS7yZJQ2Q-0[recording], https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit-jchampionsconf[slides])
 
 == 2021
