--- a/content/blog/running-jmc-on-apple-m1.asciidoc
+++ b/content/blog/running-jmc-on-apple-m1.asciidoc
@@ -16,11 +16,15 @@ https://jdk.java.net/jmc/8/[JDK Mission Control] (JMC) is invaluable for analysi
 The other day, I ran into a problem when trying to run JMC on my Mac Mini M1.
 Mostly for my own reference, here's what I did to overcome it.
 
+<!--more-->
+
 Upon launching a freshly downloaded JMC (I tried both the upstream build from OpenJDK and the one from the https://adoptium.net/de/jmc/[Eclipse Adoptium project]),
 I'd get the following error message:
 
 > The JVM shared library "/Library/Java/JavaVirtualMachines/temurin-17.jdk/Contents/Home/bin/../lib/server/libjvm.dylib"
 does not contain the JNI_CreateJavaVM symbol.
+
+image::jmc_m1_error_message.png[]
 
 "temurin-17.jdk" is my default JDK; it's the Java 17 build provided by the https://projects.eclipse.org/projects/adoptium.temurin[Eclipse Temurin] project for macOS/AArch64, i.e. the right one for the ARM chip of the M1 ("Apple silicon").
 The error message isn't overly helpful; after all, that referenced JDK works just fine for all my other applications.
