--- a/content/blog/loom-and-thread-fairness.asciidoc
+++ b/content/blog/loom-and-thread-fairness.asciidoc
@@ -12,6 +12,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
+_Update Jun 3: This post is discussed on https://www.reddit.com/r/java/comments/v394uh/loom_and_thread_fairness/[Reddit] and https://news.ycombinator.com/item?id=31600067[Hacker News]_
+
 Project Loom (https://openjdk.java.net/jeps/425[JEP 425]) is probably amongst the most awaited feature additions to Java ever;
 its implementation of virtual threads (or "green threads") promises developers the ability to create highly concurrent applications,
 for instance with hundreds of thousands of open HTTP connections,
