--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,6 +13,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2022
 
+* Kafka Summit London: Keep Your Cache Always Fresh with Debezium! (https://www.confluent.io/events/kafka-summit-london-2022/keep-your-cache-always-fresh-with-debezium/[recording], https://speakerdeck.com/gunnarmorling/keep-your-cache-always-fresh-with-debezium[slides])
 * Carnegie Mellon University https://db.cs.cmu.edu/seminar2022-booster/["Vaccination Database Tech Talks"] (online): Open-source Change Data Capture With Debezium (https://youtu.be/G7TvRzPQH-U[recording], https://speakerdeck.com/gunnarmorling/open-source-change-data-capture-with-debezium[slides]) 
 * jChampionsConference (online): Continuous Performance Regression Testing with JfrUnit (https://www.youtube.com/watch?v=OS7yZJQ2Q-0[recording], https://speakerdeck.com/gunnarmorling/continuous-performance-regression-testing-with-jfrunit-jchampionsconf[slides])
 
@@ -82,6 +83,7 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 == 2017
 
 * JavaZone, Oslo: https://2017.javazone.no/program/c96ca4909bdb42eba546accfd0f21a8c[Keeping Your Data Sane with Bean Validation 2.0]
+* code.talks, Hamburg: Neues in Bean Validation 2.0 - Support für Java 8 und mehr (https://www.youtube.com/watch?v=gY-YG23MN0g[recording])
 * JavaOne, San Francisco
   - Keeping Your Data Sane with Bean Validation 2.0
   - NoSQL? Have it Your Way!
