Adding latest conferences

--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,6 +13,12 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2022
 
+* Devoxx (Antwerp): https://devoxx.be/talk/?id=20403[Taming Kafka Connect with kcctl]
+* Devoxx (Antwerp): https://devoxx.be/talk/?id=20401[Keep Your Cache Always Fresh with Debezium!]
+* Current (Austin): https://2022.currentevent.io/website/39543/speakers/[Keep Your Cache Always Fresh with Debezium!]
+* code.talks (Hamburg): https://codetalks.de/program#talk-1376?event=7[Change Data Streaming Patterns für Verteilte Systeme]
+* Uptime (Amsterdam): https://uptime.aiven.io/session/343995[Keep Your Cache Always Fresh with Debezium!]
+* Java User Group Hamburg: https://www.meetup.com/de-DE/jug-hamburg/events/287711738/[Mit Java-18-APIs zum Mond und weiter]
 * JBCONConf (Barcelona): https://www.jbcnconf.com/2022/infoTalk.html?id=627c18d126f9720858a38ef2[Keep Your Cache Always Fresh with Debezium!]
 * Kafka Summit London: Keep Your Cache Always Fresh with Debezium! (https://www.confluent.io/events/kafka-summit-london-2022/keep-your-cache-always-fresh-with-debezium/[recording], https://speakerdeck.com/gunnarmorling/keep-your-cache-always-fresh-with-debezium[slides])
 * Carnegie Mellon University https://db.cs.cmu.edu/seminar2022-booster/["Vaccination Database Tech Talks"] (online): Open-source Change Data Capture With Debezium (https://youtu.be/G7TvRzPQH-U[recording], https://speakerdeck.com/gunnarmorling/open-source-change-data-capture-with-debezium[slides]) 
