--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -17,6 +17,8 @@ Occasionally, I link:/blog[blog] about topics related to software engineering.
 
 == Speaker Information
 
+**Title:** Senior Staff Software Engineer at Decodable
+
 **Bio:** Gunnar Morling is a software engineer and open-source enthusiast by heart, currently working at Decodable on stream processing based on Apache Flink. In his prior role as a software engineer at Red Hat, he led the Debezium project, a distributed platform for change data capture. He is a Java Champion and has founded multiple open source projects such as JfrUnit, kcctl, and MapStruct. Gunnar is an avid blogger (morling.dev) and has spoken at a wide range of conferences like QCon, Java One, and Devoxx. He lives in Hamburg, Germany.
 
 **Head shot:** link:/images/gunnar_morling_500.jpg[500px], link:/images/gunnar_morling_1000.jpg[1000px]
