--- a/content/podcasts/index.asciidoc
+++ b/content/podcasts/index.asciidoc
@@ -7,6 +7,7 @@ type: "page"
 
 I had the pleasure to do a few podcasts and interviews, mostly around Debezium and change data capture.
 
+* A Bootiful Podcast: https://spring.io/blog/2022/12/01/a-bootiful-podcast-java-champion-gunnar-morling-about-messaging-middleware-debezium-change-data-capture-and-more[Java Champion Gunnar Morling about messaging middleware, Debezium, change data capture, and more.]
 * Trino Community Broadcast: https://www.youtube.com/watch?v=yuJ1r_xUcAo[Episode #25: Trino Going Through Changes]; together with Ashhar Hasan and Ayush Chauhan
 * The InfoQ Podcast, with Wes Reisz: https://www.infoq.com/podcasts/change-data-capture-debezium[Gunnar Morling on Change Data Capture and Debezium]
 * Data Engineering Podcast by Tobias Macey: https://www.dataengineeringpodcast.com/debezium-change-data-capture-episode-114/[Episode 114 -- Change Data Capture For All Of Your Databases With Debezium]; together with Randall Hauch
